[workspace]
# We don't use any workspace settings at the moment,
# but without it Cargo thinks this crate belongs to our top-level workspace

[package]
authors = ["pixi contributors <hi@prefix.dev>"]
description = "Documentation binary that is used to generate documentation for pixi"
edition = "2021"
homepage = "https://github.com/prefix-dev/pixi"
license = "BSD-3-Clause"
name = "pixi_docs"
readme = "README.md"
repository = "https://github.com/prefix-dev/pixi"
version = "0.1.0"


[dependencies]
clap = "4.5.31"
fs-err = "3.1.0"
itertools = "0.14.0"
pixi = { path = "../.", features = ["self_update"] }
rattler_conda_types = "0.31.3"
