[workspace]
# We don't use any workspace settings at the moment,
# but without it Cargo thinks this crate belongs to our top-level workspace

[package]
name = "pixi_trampoline"
version = "0.1.0"
authors = ["pixi contributors <hi@prefix.dev>"]
edition = "2021"
homepage = "https://github.com/prefix-dev/pixi"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/prefix-dev/pixi"
description = "Trampoline binary that is used to run binaries instaled by pixi global"

[profile.release]
# Enable Link Time Optimization.
lto = true
# Reduce number of codegen units to increase optimizations.
codegen-units = 1
# Optimize for size.
opt-level = "z"
# Abort on panic.
panic = "abort"
# Automatically strip symbols from the binary.
debug = false
strip = true

[dependencies]
ctrlc = "3.4"
fs-err = "3.0.0"
miette = "7.4.0"
pixi_utils = { path = "../crates/pixi_utils" }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.128"
