[package]
authors.workspace = true
description = "An async synchronization primitive that enables waiting for a result to become available"
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "barrier_cell"
readme.workspace = true
repository.workspace = true
version = "0.1.0"

[dependencies]
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
