[package]
name = "barrier_cell"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "An async synchronization primitive that enables waiting for a result to become available"

[dependencies]
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
