[package]
name = "fancy_display"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = "Easy conversion into a styled-object"

[dependencies]
console = { workspace = true }
